nutrition detail ui demo

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -31,7 +31,7 @@
             size="large"
           ></app-button>
           <a
-            href="https://www.youtube.com/watch?v=Y7f98aduVJ8"
+            href="#"
             class="glightbox btn-watch-video d-flex align-items-center"
           >
             <i class="bi bi-play-circle"></i><span>Watch Video</span>
