--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,6 @@
       height="50px"
     />
     <a routerLink="/" class="logo d-flex align-items-center me-auto">
-      <!-- <img src="assets/images/" alt="" class="rounded-circle"> -->
       <h1 class="sitename">DIET CRAFT</h1>
     </a>
 
@@ -18,12 +17,24 @@
       <nav class="navmenu">
         <ul>
           <li *ngFor="let link of navLinks">
-            <a [routerLink]="link.url" (click)="hideMobileNav()" routerLinkActive="active">{{
-              link.label
-            }}</a>
+            <a
+              [routerLink]="link.url"
+              (click)="hideMobileNav()"
+              routerLinkActive="active"
+              >{{ link.label }}</a
+            >
           </li>
           <li *ngIf="isLoggedIn">
-            <a [routerLink]="['/profile']" (click)="hideMobileNav()" routerLinkActive="active">
+            <a
+              [routerLink]="['/profile']"
+              (click)="hideMobileNav()"
+              routerLinkActive="active"
+            >
+              <!-- <img
+                [src]="user.profileImage || '/images/default-profile.png'"
+                alt="Profile Picture"
+                class="profile-image"
+              /> -->
               <i class="fa fa-user-circle fs-2"></i>
             </a>
           </li>
@@ -44,17 +55,17 @@
             Logout
             <i class="fa fa-sign-out"></i>
           </button>
-            <div class="confirmation-message" *ngIf="loggingOut()">
-              <app-confirmation
-                message="Are You Sure To Logout ?"
-                iconClass="fa-solid fa-arrow-right-from-bracket"
-                iconColor="red"
-                head="Confirmation"
-                [confirmAction]="confirmLogout"
-                [cancelAction]="toggleLogout"
-                #confirmElement
-              ></app-confirmation>
-            </div>
+          <div class="confirmation-message" *ngIf="loggingOut()">
+            <app-confirmation
+              message="Are You Sure To Logout ?"
+              iconClass="fa-solid fa-arrow-right-from-bracket"
+              iconColor="red"
+              head="Confirmation"
+              [confirmAction]="confirmLogout"
+              [cancelAction]="toggleLogout"
+              #confirmElement
+            ></app-confirmation>
+          </div>
         </ul>
       </nav>
     </div>
